feat:结构修改+状态驱动